
Version: 1.8.1 [2011-09-19]
o Now System$mapDriveOnWindows(), System$unmapDriveOnWindows(), and
  System$getMappedDrivesOnWindows() also handles Windows UNC paths
  (i.e. network resource).  This was triggered by a discussion with
  Keith Jewell at Campden BRI Group, UK.
o WORKAROUND: isDirectory("C:/") would not return TRUE due to a
  bug in file.info("C:/") causing it to return NAs.


Version: 1.8.0 [2011-09-14]
o Added writeDataFrame().
o ROBUSTNESS: Added sanity checks to example(capitalize).
o DOCUMENTATION: Improved example(commandArgs).
o BUG FIX: commandArgs() would not handle '-<key> <value>' and
  '--<key> <value>' properly in all cases.


Version: 1.7.8 [2011-07-24]
o Undoing v1.7.7 to again exports '.conflicts.OK' in order to avoid
  several warnings when loading package.


Version: 1.7.7 [2011-07-23]
o '.conflicts.OK' is no longer exported, because it would cause
  other "downstream" packages to generate a WARNING in R CMD check.


Version: 1.7.6 [2011-04-30]
o Added isReplicated() and replicates() for identifying entries
  in a vector that are non-unique.  Corresponding isSingle() and
  singles() identifies entries that exists only once.


Version: 1.7.5 [2011-04-12]
o Now devEval("jpg", ...) is recognized as devEval("jpeg", ...).


Version: 1.7.4 [2011-04-03]
o Now hpaste(..., sep=" ", maxHead=Inf) corresponds to
  paste(..., sep=" ", collapse=", ").  Added to example.


Version: 1.7.3 [2011-04-02]
o Added hpaste() for human-readable pasting, e.g. "1, 2, 3, ..., 10".
o Now argument 'force' of devEval() defaults to 
  getOption("devEval/args/force", TRUE).


Version: 1.7.2 [2011-03-18]
o Now argument 'path' of devEval() defaults to 
  getOption("devEval/args/path", "figures/").
o Now devEval() does a better job of "cleaning up" 'name' and 'tags'.


Version: 1.7.1 [2011-03-18]
o devNew() gained option 'devNew/args/par', which can be used to specify 
  the default graphical parameters for devNew().  Any additional 